[gd_scene load_steps=11 format=2]

[ext_resource path="res://resources/img/Puase_back.png" type="Texture" id=1]
[ext_resource path="res://resources/Neucha-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://resources/Hercules.otf" type="DynamicFontData" id=3]
[ext_resource path="res://resources/img/buy_b_p.png" type="Texture" id=4]
[ext_resource path="res://resources/img/buy_b.png" type="Texture" id=5]
[ext_resource path="res://resources/img/shovel1x1.png" type="Texture" id=6]
[ext_resource path="res://resources/img/can1x1.png" type="Texture" id=7]
[ext_resource path="res://scenes/int_shop_menu.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]
size = 106
outline_size = 2
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 106
outline_size = 1
use_filter = true
font_data = ExtResource( 3 )

[node name="int_shop_menu" type="Node2D"]
script = ExtResource( 8 )

[node name="sprite" type="Sprite" parent="."]
position = Vector2( 8.25, -0.985832 )
scale = Vector2( 2.55189, 1.39367 )
texture = ExtResource( 1 )

[node name="lop_1x1" type="Label" parent="."]
margin_left = -112.0
margin_top = -52.0
margin_right = 205.0
margin_bottom = 61.0
rect_scale = Vector2( 0.3, 0.3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Лопата"

[node name="lop_buy" type="TextureButton" parent="."]
margin_left = 84.0
margin_top = -56.0
margin_right = 116.0
margin_bottom = -21.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
expand = true

[node name="lop_price" type="Label" parent="."]
margin_left = 12.0
margin_top = -52.0
margin_right = 116.0
margin_bottom = 81.0
rect_scale = Vector2( 0.25, 0.25 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_fonts/font = SubResource( 2 )
text = "$12"

[node name="Shovel1X1" type="Sprite" parent="."]
position = Vector2( -67, -60 )
scale = Vector2( 1.28462, 1.28462 )
texture = ExtResource( 6 )

[node name="can_1x1" type="Label" parent="."]
margin_left = -112.0
margin_top = 19.0
margin_right = 124.0
margin_bottom = 132.0
rect_scale = Vector2( 0.3, 0.3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Лейка"

[node name="can_buy" type="TextureButton" parent="."]
margin_left = 84.0
margin_top = 19.0
margin_right = 116.0
margin_bottom = 54.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
expand = true

[node name="can_price" type="Label" parent="."]
margin_left = 12.0
margin_top = 19.0
margin_right = 116.0
margin_bottom = 152.0
rect_scale = Vector2( 0.25, 0.25 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_fonts/font = SubResource( 2 )
text = "$12"

[node name="Can1X1" type="Sprite" parent="."]
position = Vector2( -76, 6 )
scale = Vector2( 1.76923, 1.76923 )
texture = ExtResource( 7 )

[node name="sfx" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="lop_buy" to="." method="_on_lop_buy_pressed"]
[connection signal="pressed" from="can_buy" to="." method="_on_can_buy_pressed"]
